crates/gaia/check_out.txt
    Checking cfd-mesh v0.1.0 (C:\Users\RyanClanton\gcli\software\millifluidic_design\CFDrs\crates\cfd-mesh)
error[E0308]: mismatched types
   --> crates\cfd-mesh\examples\csg\sphere_cylinder.rs:184:50
    |
184 |     let chi_ok = wt.euler_characteristic == Some(expected_chi);
    |                                             ---- ^^^^^^^^^^^^ expected `i64`, found `isize`
    |                                             |
    |                                             arguments to this enum variant are incorrect
    |
help: the type constructed contains `isize` due to the type of the argument passed
   --> crates\cfd-mesh\examples\csg\sphere_cylinder.rs:184:45
    |
184 |     let chi_ok = wt.euler_characteristic == Some(expected_chi);
    |                                             ^^^^^------------^
    |                                                  |
    |                                                  this argument influences the type of `Some`
note: tuple variant defined here
   --> C:\Users\RyanClanton\.rustup\toolchains\nightly-x86_64-pc-windows-gnu\lib/rustlib/src/rust\library\core\src\option.rs:607:5
    |
607 |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^^^
help: you can convert an `isize` to an `i64` and panic if the converted value doesn't fit
    |
184 |     let chi_ok = wt.euler_characteristic == Some(expected_chi.try_into().unwrap());
    |                                                              ++++++++++++++++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `cfd-mesh` (example "csg_sphere_cylinder") due to 1 previous error
